2018-04-06  Andreas Schwab  <schwab@linux-m68k.org>

	* manual/charset.texi (Converting a Character): Fix typo.

2018-04-05  Florian Weimer  <fweimer@redhat.com>

	* manual/examples/mbstouwcs.c (mbstouwcs): Fix loop termination,
	integer overflow, memory leak on error, and indeterminate errno
	value.  Add a null wide character to terminate the result string.
	* manual/charset.texi (Converting a Character): Mention embedded
	null bytes in the mbrtowc input string.  Explain what happens in
	the -2 result case.  Do not claim that mbrtowc is simple or
	obvious to use.  Adjust the description of the code example.  Use
	@code, not @var, for concrete variables.

2018-04-05  Florian Weimer  <fweimer@redhat.com>

	* manual/examples/mbstouwcs.c: New file.
	* manual/charset.texi (Converting a Character): Include it.

2018-04-03  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #22947]
	* bits/uio-ext.h (RWF_APPEND): New.
	* sysdeps/unix/sysv/linux/bits/uio-ext.h (RWF_APPEND): Likewise.
	* manual/llio.texi: Document RWF_APPEND.
	* misc/tst-preadvwritev2-common.c (RWF_APPEND): New.
	(RWF_SUPPORTED): Add RWF_APPEND.

2018-03-27  Jesse Hathaway  <jesse@mbuki-mvuki.org>

	* sysdeps/unix/sysv/linux/getlogin_r.c (__getlogin_r_loginuid): Return
	early when linux sentinel value is set.

2018-03-27  Andreas Schwab  <schwab@suse.de>

	[BZ #23005]
	* resolv/res_send.c (__res_context_send): Return ENOMEM if
	allocation of private copy of nsaddr_list fails.

2018-03-20  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17343]
	* stdlib/random_r.c (__random_r): Use unsigned arithmetic for
	possibly overflowing computations.

2018-04-26  Aurelien Jarno  <aurelien@aurel32.net>

	* signal/tst-sigaction.c: New file to test BZ #23069.
	* signal/Makefile (tests): Fix indentation. Add tst-sigaction.

2018-04-28  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #23069]
	* sysdeps/unix/sysv/linux/riscv/kernel_sigaction.h: New file.

2018-03-29  Florian Weimer  <fweimer@redhat.com>
