@@ -1,3 +1,9 @@
+2018-04-09  Florian Weimer  <fweimer@redhat.com>
+
+	[BZ #23037]
+	* resolv/res_send.c (send_dg): Use designated initializers instead
+	of assignment to zero-initialize other fields of struct mmsghdr.
+
 2018-04-06  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* manual/charset.texi (Converting a Character): Fix typo.
